fixed flexbox and uneven alignment issues

--- a/src/App.scss
+++ b/src/App.scss
@@ -36,4 +36,10 @@
 .main {
     overflow-y: visible;
     margin-top: 64px;
+    text-align: center;
+}
+
+.main-center {
+    width: 75vw;
+    display: inline-block;
 }
